public/css/app.css
/* ... */
[type='checkbox']:indeterminate:hover,[type='checkbox']:indeterminate:focus {
	border-color: transparent;
	background-color: currentColor;
}

[type='file'] {
	background: unset;
	border-color: inherit;
	border-width: 0;
	border-radius: 0;
	padding: 0;
	font-size: unset;
	line-height: inherit;
}

[type='file']:focus {
	outline: 1px auto -webkit-focus-ring-color;
}
.container {
	width: 100%;
}
@media (min-width: 640px) {

	.container {
		max-width: 640px;
	}
}
@media (min-width: 768px) {

	.container {
		max-width: 768px;
	}
}
@media (min-width: 1024px) {

	.container {
		max-width: 1024px;
	}
}
@media (min-width: 1280px) {

	.container {
		max-width: 1280px;
	}
}
@media (min-width: 1536px) {

	.container {
		max-width: 1536px;
	}
}
.sr-only {
	position: absolute;
	width: 1px;
	height: 1px;
	padding: 0;
	margin: -1px;
	overflow: hidden;
	clip: rect(0, 0, 0, 0);
	white-space: nowrap;
	border-width: 0;
}
.pointer-events-none {
	pointer-events: none;
}
.relative {
	position: relative;
}
.absolute {
	position: absolute;
}
.fixed {
	position: fixed;
}
.inset-0 {
	top: 0px;
	right: 0px;
	bottom: 0px;
	left: 0px;
}
.inset-x-0 {
	left: 0px;
	right: 0px;
}
.inset-y-0 {
	top: 0px;
	bottom: 0px;
}
.inset-y-1 {
	top: 0.25rem;
	bottom: 0.25rem;
}
.top-0 {
	top: 0px;
}
.right-0 {
	right: 0px;
}
.bottom-0 {
	bottom: 0px;
}
.z-40 {
	z-index: 40;
}
.z-10 {
	z-index: 10;
}
.z-0 {
	z-index: 0;
}
.col-span-2 {
	grid-column: span 2 / span 2;
}
.mx-auto {
	margin-left: auto;
	margin-right: auto;
}
.my-1 {
	margin-top: 0.25rem;
	margin-bottom: 0.25rem;
}
.-my-2 {
	margin-top: -0.5rem;
	margin-bottom: -0.5rem;
}
.my-4 {
	margin-top: 1rem;
	margin-bottom: 1rem;
}
.mx-0 {
	margin-left: 0px;
	margin-right: 0px;
}
.mx-2 {
	margin-left: 0.5rem;
	margin-right: 0.5rem;
}
.-mx-2 {
	margin-left: -0.5rem;
	margin-right: -0.5rem;
}
.-my-1\.5 {
	margin-top: -0.375rem;
	margin-bottom: -0.375rem;
}
.-my-1 {
	margin-top: -0.25rem;
	margin-bottom: -0.25rem;
}
.mx-4 {
	margin-left: 1rem;
	margin-right: 1rem;
}
.mt-3 {
	margin-top: 0.75rem;
}
.mt-10 {
	margin-top: 2.5rem;
}
.ml-3 {
	margin-left: 0.75rem;
}
.mt-8 {
	margin-top: 2rem;
}
.mt-2 {
	margin-top: 0.5rem;
}
.-mr-12 {
	margin-right: -3rem;
}
.ml-1 {
	margin-left: 0.25rem;
}
.ml-6 {
	margin-left: 1.5rem;
}
.mt-5 {
	margin-top: 1.25rem;
}
.ml-4 {
	margin-left: 1rem;
}
.-mr-2 {
	margin-right: -0.5rem;
}
.mt-4 {
	margin-top: 1rem;
}
.mt-6 {
	margin-top: 1.5rem;
}
.mt-1 {
	margin-top: 0.25rem;
}
.ml-2 {
	margin-left: 0.5rem;
}
.ml-5 {
	margin-left: 1.25rem;
}
.mr-2 {
	margin-right: 0.5rem;
}
.block {
	display: block;
}
.inline-block {
	display: inline-block;
}
.flex {
	display: flex;
}
.inline-flex {
	display: inline-flex;
}
.table {
	display: table;
}
.grid {
	display: grid;
}
.hidden {
	display: none;
}
.h-64 {
	height: 16rem;
}
.h-full {
	height: 100%;
}
.h-16 {
	height: 4rem;
}
.h-6 {
	height: 1.5rem;
}
.h-screen {
	height: 100vh;
}
.h-10 {
	height: 2.5rem;
}
.h-8 {
	height: 2rem;
}
.h-5 {
	height: 1.25rem;
}
.h-14 {
	height: 3.5rem;
}
.h-4 {
	height: 1rem;
}
.h-12 {
	height: 3rem;
}
.min-h-screen {
	min-height: 100vh;
}
.w-full {
	width: 100%;
}
.w-16 {
	width: 4rem;
}
.w-6 {
	width: 1.5rem;
}
.w-10 {
	width: 2.5rem;
}
.w-auto {
	width: auto;
}
.w-14 {
	width: 3.5rem;
}
.w-64 {
	width: 16rem;
}
.w-8 {
	width: 2rem;
}
.w-5 {
	width: 1.25rem;
}
.w-48 {
	width: 12rem;
}
.w-0 {
	width: 0px;
}
.w-4 {
	width: 1rem;
}
.w-1\/2 {
	width: 50%;
}
.w-12 {
	width: 3rem;
}
.min-w-0 {
	min-width: 0px;
}
.min-w-full {
	min-width: 100%;
}
.max-w-7xl {
	max-width: 80rem;
}
.max-w-md {
	max-width: 28rem;
}
.max-w-6xl {
	max-width: 72rem;
}
.max-w-xs {
	max-width: 20rem;
}
.max-w-sm {
	max-width: 24rem;
}
.max-w-3xl {
	max-width: 48rem;
}
.flex-1 {
	flex: 1 1 0%;
}
.flex-shrink-0 {
	flex-shrink: 0;
}
.flex-grow {
	flex-grow: 1;
}
.transform {
	--tw-translate-x: 0;
	--tw-translate-y: 0;
	--tw-rotate: 0;
	--tw-skew-x: 0;
	--tw-skew-y: 0;
	--tw-scale-x: 1;
	--tw-scale-y: 1;
	transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
.origin-top-right {
	transform-origin: top right;
}
.-translate-x-full {
	--tw-translate-x: -100%;
}
.translate-x-0 {
	--tw-translate-x: 0px;
}
.scale-95 {
	--tw-scale-x: .95;
	--tw-scale-y: .95;
}
.scale-100 {
	--tw-scale-x: 1;
	--tw-scale-y: 1;
}
@-webkit-keyframes spin {

	to {
		transform: rotate(360deg);
	}
}
@keyframes spin {

	to {
		transform: rotate(360deg);
	}
}
.animate-spin {
	-webkit-animation: spin 1s linear infinite;
	        animation: spin 1s linear infinite;
}
.appearance-none {
	-webkit-appearance: none;
	   -moz-appearance: none;
	        appearance: none;
}
.grid-cols-1 {
	grid-template-columns: repeat(1, minmax(0, 1fr));
}
.flex-col {
	flex-direction: column;
}
.items-center {
	align-items: center;
}
.items-start {
	align-items: flex-start;
}
.justify-center {
	justify-content: center;
}
.justify-end {
	justify-content: flex-end;
}
.justify-between {
	justify-content: space-between;
}
.justify-start {
	justify-content: flex-start;
}
.gap-5 {
	gap: 1.25rem;
}
.gap-y-6 {
	row-gap: 1.5rem;
}
.space-y-3 > :not([hidden]) ~ :not([hidden]) {
	--tw-space-y-reverse: 0;
	margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
	margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
}
.space-x-10 > :not([hidden]) ~ :not([hidden]) {
	--tw-space-x-reverse: 0;
	margin-right: calc(2.5rem * var(--tw-space-x-reverse));
	margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
}
.space-x-6 > :not([hidden]) ~ :not([hidden]) {
	--tw-space-x-reverse: 0;
	margin-right: calc(1.5rem * var(--tw-space-x-reverse));
	margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
}
.space-y-6 > :not([hidden]) ~ :not([hidden]) {
	--tw-space-y-reverse: 0;
	margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
	margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
}
/* ... */

